report: prevent opportunity time unit from wrapping

--- a/report/assets/styles.css
+++ b/report/assets/styles.css
@@ -874,6 +874,7 @@
 .lh-audit--load-opportunity .lh-audit__display-text {
   text-align: right;
   flex: 0 0 calc(4 * var(--report-font-size));
+  white-space: nowrap;
 }
 
 
